Dev/src/Geopointe/objects/User_Usage__c.object
<CustomObject>
    <description>Track user&apos;s last usage of Geopointe</description>
    <fields>
        <fullName>Last_Use_Type__c</fullName>
        <label>Last Use Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Map Tab</fullName>
                </value>
                <value>
                    <fullName>Salesforce1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Use__c</fullName>
        <label>Last Use</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe User Usage</label>
    <nameField>
        <displayFormat>UU-{0}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Users Usages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>